codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__goal_setup.snap
---
source: tui/src/chatwidget/tests/goal_menu.rs
expression: "render_bottom_popup(&chat, 80)"
---
| Set goal
| Budget: None  tab focus, arrows cycle
| Objective:
| What should Codex keep working toward?
|

Press enter to confirm or esc to go back
