codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_completed_reason_history_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: rendered
---
• PreToolUse hook (completed)
  reason: approved by policy
