codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__streaming_table_tail_active.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: active_blob(&chat)
---
• ┌──────┬───────┐
  │ Name │ Value │
  ├──────┼───────┤
  └──────┴───────┘
